--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
 {
 	color: #474747;
 }
+.secondary-bg{
+	background-color: #fff8f3;
+}
 
 .btn-primary{
 	background-color: #FD6E0A;
@@ -25,6 +28,15 @@
 	border: none;
 
 
+}
+.section-title{
+	font-size: 35px;
+	font-weight: bold;
+	color: #181818;
+}
+.section-description{
+	font-size: 18px;
+	color: #757575;
 }
 /* Headder */
 .header{
@@ -76,4 +88,25 @@ nav ul a{
 }
 .bannar-content{
 	width: 580px;
+}
+/* main style */
+main{
+	max-width: 1140px;
+	margin: 0 auto;
+}
+
+/* about style */
+.about{
+	border-radius: 10px;
+	padding: 130px 150px;
+	text-align: center;
+	margin-top: 130px;
+
+}
+.about-items{
+	display: flex;
+	justify-content: space-around;
+}
+.item-description{
+	font-weight: 600;
 }
