--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@
 	font-size: 18px;
 	color: #757575;
 }
+.text-center{
+	text-align: center;
+}
 /* Headder */
 .header{
 	background-image: url('../webdev-portfolio/images/developer.png');
@@ -96,11 +99,15 @@ main{
 }
 
 /* about style */
+main section{
+	margin-top: 130px;
+	margin-bottom: 130px
+}
 .about{
 	border-radius: 10px;
 	padding: 130px 150px;
 	text-align: center;
-	margin-top: 130px;
+	
 
 }
 .about-items{
@@ -109,4 +116,15 @@ main{
 }
 .item-description{
 	font-weight: 600;
+}
+
+/* skill */
+.skills-continer{
+	display: flex;
+	gap: 24px;
+}
+.skill{
+	padding: 30px;
+	border-radius: 5px;
+	box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
 }
